--- a/wearable/src/main/res/values/dimens.xml
+++ b/wearable/src/main/res/values/dimens.xml
@@ -3,6 +3,11 @@
     <dimen name="digital_text_size">40dp</dimen>
     <dimen name="digital_text_size_round">45dp</dimen>
     <dimen name="digital_x_offset">15dp</dimen>
-    <dimen name="digital_x_offset_round">25dp</dimen>
+    <dimen name="digital_x_offset_round">50dp</dimen>
     <dimen name="digital_y_offset">90dp</dimen>
+    <dimen name="digital_y_offset_line2">120dp</dimen>
+    <dimen name="digital_x_offset_lineStart">70dp</dimen>
+    <dimen name="digital_y_offset_lineStart">130dp</dimen>
+    <dimen name="digital_x_offset_lineStop">140dp</dimen>
+    <dimen name="digital_y_offset_lineStop">130dp</dimen>
 </resources>
